# documents

./: .dockerignore  .gitignore  10_import_annotation_pages.py  10_match_folios.py  11_add_scan_order.py  11_interpolate_pages.py  12_interpolate_documents.py  13_remove_numbers_behind_page.py  14_fill_baseline_boundaries.py  14_import_validated_docs.py  15_import_validated_docs.py  16_add_titles_to_documents.py  17_add_language_data.py  1_import_scans_and_inventories.py  2_import_pages.py  3.5_import_empty_pages.py  3_import_hierarchy.py  4_identify_documents_baseline.py  6_import_settlements.py  7_import_obp_index.py  8_import_GM.py  9.5_backfill_confidence.py  9_import_annotation_pages_exist.py  Dockerfile  README.md  app.py  export.py  export_collection.py  export_documents.py  export_documents_csv.py  export_manifests.py  folio_interpolation.ipynb  main.py  models.py  pyproject.toml  requirements.txt
.github/workflows/: container-build.yml
data/: extract_archival_hierarchy.py  inventories.json
templates/: base.html  document_detail.html  document_type_detail.html  document_types.html  documents.html  entity_mention_detail.html  entity_mentions.html  index.html  inventories.html  inventory_detail.html  layout_element_detail.html  method_detail.html  methods.html  page_detail.html  pages.html  scan_detail.html  scans.html  search.html  settlement_detail.html  settlements.html
