[project]
name = "documents"
version = "0.1.0"
description = "Flask web application for browsing and inspecting historical documents from the GLOBALISE archive"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask==3.1.2",
    "flask-cors==6.0.2",
    "lxml==6.0.2",
    "pandas==2.3.3",
    "sqlalchemy==2.0.45",
    "tqdm==4.67.1",
    "unidecode==1.4.0",
    "werkzeug==3.1.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
